--- a/public/global.css
+++ b/public/global.css
@@ -119,3 +119,11 @@ button:focus {
 	font-weight: bold;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'MikadoRegular';
+	src: url('./assets/font/subset-MikadoRegular.woff2') format('woff2'),
+	url('./assets/font/subset-MikadoRegular.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
